Add post module and authorization utils
